[package]
name = "rust_google_cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.13"
jsonwebtoken = "8.1"
chrono = "0.4"
dotenv = "0.15"
once_cell = "1.17"
